# Taller1_ReproductorDeMusica-

./: .gitignore  CMakeLists.txt  README.md  main.cpp  music_source.txt  status.cfg
Clases/: Cancion.cpp  Cancion.h  EstadoReproductor.cpp  EstadoReproductor.h
Core/: ControladorApp.cpp  ControladorApp.h  GestorArchivos.cpp  GestorArchivos.h  InterfazConsola.cpp  InterfazConsola.h
estructura_data/: ListaDoble.cpp  ListaDoble.h  Nodo.cpp  Nodo.h
